--- a/weapp/termite/static/css/common_widget.css
+++ b/weapp/termite/static/css/common_widget.css
@@ -142,6 +142,7 @@
     right: -5px;
     top:-5px;
     text-align: center;
+    font-style: normal;
 }
 .wui-template-globalNavbar .xui-globalSideBar li i{
     display: block;
@@ -216,7 +217,7 @@
     -webkit-transform:rotate(-90deg); /* Safari 和 Chrome */
     display: inline-block;
     float: right;
-    margin-top: 19px;
+    margin-top: 21px;
 }
 .wui-template-globalNavbar .xui-sidePanel .xui-mainMenu li span i.xui-topArrow{
     border-left: 6px solid transparent;
