修改在售商品列表排序

--- a/weapp/mall/templates/mall/editor/onshelf_products.html
+++ b/weapp/mall/templates/mall/editor/onshelf_products.html
@@ -86,7 +86,7 @@
 				<th width="68" class="tx_sortable" data-sort-attr="sales"><a href="javascript:;">总销量</a></th>
 				<th width="120" class="tx_sortable" data-sort-attr="created_at"><a href="javascript:;">创建时间</a></th>
 				{{if data.data.owner_id != 216}}
-				<th width="58" class="tx_sortable" data-sort-attr="display_index"><a href="javascript:;">排序</a></th>
+				<th width="58">排序</th>
 				{{/if}}
 				<th width="100">操作</th>
 			</tr>
