--- a/weapp/termite/static/v4/css/app_widget.css
+++ b/weapp/termite/static/v4/css/app_widget.css
@@ -284,7 +284,7 @@
 	font-size: 24px;
 	font-weight: bold;
 	margin-left: 25%;
-	margin-top: 8px;
+	margin-top: 25px;
 	padding: 0 5px;
 	position: absolute;
 	color: white;
@@ -324,6 +324,12 @@
 	text-align: center;
 	border: 1px;
 	border-radius:5px;
+}
+.wui-lotterydescription .xui-lottery-unit b{
+	color: white;
+    display: inline-block;
+    font-size: 15px;
+    width: 45px;
 }
 .xa-lottery-unit-0{
 	background-position: 0 0;
