修改bug 【店铺导航】删除按钮根据鼠标移动显示问题

--- a/weapp/static_v2/js/view/termite_navbar_second_nav/template.html
+++ b/weapp/static_v2/js/view/termite_navbar_second_nav/template.html
@@ -64,6 +64,6 @@
 			</div>
 			<div class="errorHint"></div>
 		</div>
-		<button class="close xa-second-nav-close xui-removeImageButton" style="display:block;" type="button"><span>×</span></button>
+		<button class="close xa-second-nav-close xui-removeImageButton" style="display:none;" type="button"><span>×</span></button>
 	</div>
 </script>
