--- a/weapp/static_v2/js/view/termite_navbar_second_nav/template.html
+++ b/weapp/static_v2/js/view/termite_navbar_second_nav/template.html
@@ -3,7 +3,7 @@
 	<div class="xui-navbar-secondnav-navs xa-navbar-secondnav-navs">
 		
 	</div>
-    <a class="xui-navbar-secondnav-addBtn xa-navbar-secondnav-add" href="javascrip:void(0);">
+    <a class="xui-navbar-secondnav-addBtn xa-navbar-secondnav-add" href="javascript:void(0);">
     	+添加二级菜单
     </a>
 </script>
