--- a/weapp/static_v2/css/base.css
+++ b/weapp/static_v2/css/base.css
@@ -476,20 +476,21 @@ select{
     top: 0;
     width: 190px;
 }
-.xui-mainPanel .xui-sideBar-votes{
+.xui-mainPanel .xui-sideBar-votes,.xui-mainPanel .xui-sideBar-events,.xui-mainPanel .xui-sideBar-surveies,.xui-mainPanel .xui-sideBar-feedbacks{
 	background-image: url('/static_v2/img/editor/icon_sideBar2.png');
-	background-position: 18px -85px;
 	background-repeat: no-repeat;
+}
+.xui-mainPanel .xui-sideBar-votes{
+	background-position: 18px -85px;
 }
 .xui-mainPanel .xui-sideBar-events{
-	background-image: url('/static_v2/img/editor/icon_sideBar2.png');
 	background-position: 18px 2px;
-	background-repeat: no-repeat;
 }
 .xui-mainPanel .xui-sideBar-surveies{
-	background-image: url('/static_v2/img/editor/icon_sideBar2.png');
 	background-position: 18px -19px;
-	background-repeat: no-repeat;
+}
+.xui-mainPanel .xui-sideBar-feedbacks{
+	background-position: 18px -63px;
 }
 .xui-mainPanel .xui-sideBar-realtime_messages{
 	background-position: -48px -141px;
