--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -60,7 +60,8 @@
 		<div class="xui-i-col">
 			<div class="ml80">
 				<a class="btn btn-primary mr30 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;&nbsp;询</a>
-				<a class="btn btn-default xa-reset xui-fontBold" href="javascript:void(0);">批量导出</a>
+				<a class="btn btn-default xa-export xui-fontBold" href="javascript:void(0);">批量导出</a>
+                <a id="export_href" >DownloadXLS</a>
 			</div>
 		</div>
 	</div>
@@ -162,6 +163,33 @@ $(document).ready(function() {
 			emptyDataHint: '没有符合条件的数据'
 		});
 	});
+
+    //导出
+    $('.xa-export').click(function(event){
+        var export_id =window.location.search.split('?id=')[1];
+        console.log(export_id);
+        W.getApi().call({
+            method: 'get',
+            app: 'apps/survey',
+            resource: 'survey_participances-export',
+            args: {'export_id':export_id},
+            success: function(resp){
+
+                if(resp.code == 200){
+                    $('#export_href').prop({
+                        'href': resp.download_path,
+                        'download': resp.filename
+                    });
+
+                }
+                console.log("success");
+                console.log(resp);
+            },
+            error: function(error){
+                console.log('导出失败');
+            }
+        });
+    });
 });
 </script>
 {% endblock %}
