--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -378,7 +378,7 @@
                     if ($textSelection.length > 0){
                         participanceData['actionButtons'] = JSON.stringify([{
                             'text': '查看结果',
-                            'url': '/apps/'+W.appName+'/result_vote/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId+'&member_id={{ member_id }}'
+                            'url': 'm/apps/'+W.appName+'/result_vote/?webapp_owner_id='+W.webappOwnerId+'&id='+W.appRecordId+'&member_id={{ member_id }}'
                         }]);
                     }
                     W.getApi().call({
