--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -1221,6 +1221,7 @@ button.xui-removeImageButton{
 }
 .xui-propertyView-navbar-settings .propertyGroup_property_radioField .propertyGroup_property_label{
 	text-align: left;
+	margin-top:3px; 
 }
 .xui-wepage-globalNavPage .xui-propertyView-navbar-navs .propertyGroup_property_dynamicControlField_control{
 	border:1px solid #E6E6E6;
