--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -61,7 +61,7 @@
 			<div class="ml80">
 				<a class="btn btn-primary mr30 xa-search xui-fontBold" href="javascript:void(0);">查&nbsp;&nbsp;&nbsp;&nbsp;询</a>
 				<a class="btn btn-default xa-export xui-fontBold" href="javascript:void(0);">批量导出</a>
-                <a id="export_href" >DownloadXLS</a>
+                <a id="export_href" style="display: none ">DownloadXLS</a>
 			</div>
 		</div>
 	</div>
@@ -179,11 +179,10 @@ $(document).ready(function() {
                     $('#export_href').prop({
                         'href': resp.download_path,
                         'download': resp.filename
-                    });
+                    }).get(0).click();
 
                 }
-                console.log("success");
-                console.log(resp);
+                console.log("导出成功");
             },
             error: function(error){
                 console.log('导出失败');
