--- a/weapp/termite/static/termite_js/app/component/wepage/navbar/navbar.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/navbar/navbar.html
@@ -70,7 +70,7 @@
                 {% for component in component.components %}
                 <li class="xui-firstNav xa-firstNav" data-component-cid="{{component.cid}}"> 
                     <a href="{{ component.model.target|extract_target_data:request|safe }}">
-                        <span class="wa-inner-link">{{ component.model.title }}<i class="xui-leftArrow"></i></span>
+                        <span ><em class="wa-inner-link">{{ component.model.title }}</em><i class="xui-leftArrow"></i></span>
                     </a>
                     <ul class="xui-subMenu">                        
                         {% for second_nav in component.model.second_navs %}
