--- a/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/lottery/templates/editor/workbench.html
@@ -10,7 +10,7 @@
       <li>您当前所在位置</li>
       <li><a href="/termite2/pages/">百宝箱</a></li>
       <li><a href="/apps/lottery/lotteries/">微信抽奖</a></li>
-      <li class="active">新建</li>
+      <li class="active">新建抽奖</li>
     </ul>
   </div>
   
