--- a/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
+++ b/weapp/apps/customerized_apps/vote/templates/webapp/result_vote.html
@@ -86,7 +86,7 @@
                 <li class="wui-i-item">
                     <label class="wui-i-label">{{ item.title }}</label>
                     <div class="wui-i-inputContainer xa-inputControl" >
-                        <input class="wui-i-input" type="text"  placeholder="" value="{{ item.values }}" disabled>
+                        <input class="wui-i-input" type="text"  placeholder="" value="{{ item.values }}" style="color: #666666" disabled>
                     </div>
                 </li>
             </ul>
