--- a/weapp/termite/static/termite_js/app/component/appkit/textlist/textlist.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/textlist/textlist.html
@@ -27,7 +27,7 @@
         {% endif %}
         {% if component.model.modules.phone.select %}
         <li class="wui-i-item">
-            <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">手机号</label>
+            <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">手机</label>
             <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="phone" data-control-type="appkit.shortcuts">
                 <input
                     class="wui-i-input"
