--- a/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/workbench.html
@@ -10,7 +10,7 @@
       <li>您当前所在位置</li>
       <li><a href="/termite2/pages/">百宝箱</a></li>
       <li><a href="/apps/survey/surveies/">用户调研</a></li>
-      <li class="active">新建</li>
+      <li class="active">新建调研</li>
     </ul>
   </div>
   
