--- a/weapp/termite/static/termite_js/app/component/appkit/shortcuts/shortcuts.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/shortcuts/shortcuts.html
@@ -23,13 +23,13 @@
 	{% endif %}
 	{% if component.model.modules.phone.select %}
 	<li class="wui-i-item">
-		<label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">手机号</label>
+		<label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">手机</label>
 		<div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="phone" data-control-type="appkit.shortcuts">
 			<input 
 				class="wui-i-input" 
 				type="text" 
 				name="phone" 
-				placeholder="请输入手机号" 
+				placeholder="请输入手机号"
 				{% if component.model.is_mandatory == 'true' %}data-validate="require-mobile-phone::请输入正确的手机号"{% endif %}
 			/>
 		</div>
