--- a/weapp/templates/global_navbar.html
+++ b/weapp/templates/global_navbar.html
@@ -76,6 +76,7 @@
                     </ul>
                 </li>
                 {% endfor %}
+                <li class="xui-firstNav"></li>
             </ul>
         </div>
     </div>    
