--- a/weapp/termite/static/termite_js/app/component/wepage/navbar/navbar.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/navbar/navbar.html
@@ -79,6 +79,7 @@
                     </ul>
                 </li>
                 {% endfor %}
+                <li class="xui-firstNav"></li>
 			</ul>
 		</div>
 	</div>    
