--- a/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/lotterydescription/lotterydescription.html
@@ -72,8 +72,8 @@
 	<div class="wui-i-info">
 		<i class="wui-i-sprite xui-sprite-timerange"></i>
 		<div class="wui-i-time">
-			<div class="wui-i-start_time">{{component.model.start_time}}</div>
-            至<div class="wui-i-end_time">{{component.model.end_time}}</div>
+			<p class="wui-i-start_time">{{component.model.start_time}}</p>
+            至<p class="wui-i-end_time">{{component.model.end_time}}</p>
 		</div>
         <i class="wui-i-sprite xui-sprite-prize"></i>
         <div class="wui-i-prize">
