bug 个人中心加类名

--- a/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
+++ b/weapp/webapp/modules/user_center/templates/webapp/default_v3/user_center.html
@@ -3,7 +3,7 @@
 
 
 {% block content-panel %}
-<div class="xui-userCenterPage xui-page wa-page">
+<div class="xui-userCenterPage xui-page wa-shopBottomNavPage">
     <!-- 全局导航 -->
     <div class="wui-globalNav xa-globalNav" {% if global_navbar %}{% else %}{% if request.webapp_owner_id != 216 %}{% endif %} data-ui-role="global-nav"{% endif %} data-member="{% if cur_request_member %}true{% else %}false{% endif %}">
     </div>
