修复会员详情部分没有昵称的情况

--- a/weapp/member/templates/member/editor/member_detail.html
+++ b/weapp/member/templates/member/editor/member_detail.html
@@ -26,7 +26,7 @@
         		<div class="xui-img-wrap">
         			 <div  class="xui-img" style="background-image: url({{show_member.user_icon}}
 ); background-size:100%;" ></div>
-        			  <p class=" xui-membername">{{ show_member.username_for_html|safe| truncatechars:8 }}</p>
+        			  <p class=" xui-membername">{{ show_member.username_truncated|safe }}</p>
         		</div>
         	 
         	</div>
