--- a/weapp/templates/global_navbar.html
+++ b/weapp/templates/global_navbar.html
@@ -15,7 +15,7 @@
             {% for sub_component in component.components %}
             <div class="">
                 <div data-component-cid="{{sub_component.cid}}" class="xui-flex xui-flex-{{component.components|length}} xui-menu xa-menu f14">
-                        <a href="{{ sub_component.model.target|extract_target_data:request|safe }}" class="wa-inner-link">{{ sub_component.model.title }}</a>
+                    <a href="{% if sub_component.model.second_navs %}javascript:void(0);{% else %}{{ sub_component.model.target|extract_target_data:request|safe }}{% endif %}" class="wa-inner-link">{{ sub_component.model.title }}</a>
                 </div>
                 <div class="xui-subMenuContainer">
                     <span class="xui-menuArrow"></span>
@@ -64,13 +64,13 @@
                     </a>
                 </li>
 
-                {% for component in component.components %}
-                <li class="xui-firstNav xa-firstNav" data-component-cid="{{component.cid}}"> 
-                    <a href="{{ component.model.target|extract_target_data:request|safe }}">
-                        <span class="wa-inner-link">{{ component.model.title }}<i class="xui-leftArrow"></i></span>
+                {% for sub_component in component.components %}
+                <li class="xui-firstNav xa-firstNav" data-component-cid="{{sub_component.cid}}"> 
+                    <a href="{% if sub_component.model.second_navs %}javascript:void(0);{% else %}{{ sub_component.model.target|extract_target_data:request|safe }}{% endif %}">
+                        <span class="wa-inner-link">{{ sub_component.model.title }}<i class="xui-leftArrow"></i></span>
                     </a>
                     <ul class="xui-subMenu">                        
-                        {% for second_nav in component.model.second_navs %}
+                        {% for second_nav in sub_component.model.second_navs %}
                         <li class="pl50"><a href="{{ second_nav.target|extract_target_data:request|safe }}">{{ second_nav.title }}</a></li>
                         {% endfor %}
                     </ul>
