--- a/weapp/termite/static/termite_js/app/component/wepage/navbar/navbar.html
+++ b/weapp/termite/static/termite_js/app/component/wepage/navbar/navbar.html
@@ -17,7 +17,7 @@
             {% for component in component.components %}
             <div class="xui-menuBox">
                 <div data-component-cid="{{component.cid}}" class="xui-flex xui-flex-{{component.parent_component.sub_component_count}} xui-menu xa-menu f14">
-                        <a href="{{ component.model.target|extract_target_data:request|safe }}" class="wa-inner-link">{{ component.model.title }}</a>
+                    <a href="{% if component.model.second_navs %}javascript:void(0);{% else %}{{ component.model.target|extract_target_data:request|safe }}{% endif %}" class="wa-inner-link">{{ component.model.title }}</a>   
                 </div>
                 <div class="xui-subMenuContainer">
                     <span class="xui-menuArrow"></span>
@@ -69,7 +69,7 @@
 
                 {% for component in component.components %}
                 <li class="xui-firstNav xa-firstNav" data-component-cid="{{component.cid}}"> 
-                    <a href="{{ component.model.target|extract_target_data:request|safe }}">
+                    <a href="{% if component.model.second_navs %}javascript:void(0);{% else %}{{ component.model.target|extract_target_data:request|safe }}{% endif %}">
                         <span ><em class="wa-inner-link">{{ component.model.title }}</em><i class="xui-leftArrow"></i></span>
                     </a>
                     <ul class="xui-subMenu">                        
