--- a/weapp/termite2/templates/termite2/global_navbar_editor.html
+++ b/weapp/termite2/templates/termite2/global_navbar_editor.html
@@ -66,6 +66,7 @@
 	W.projectType = "global_navbar";
 	var isCreateNewData = {% if is_new_navbar %}true{% else %}false{% endif %};
 	W.isSystemManager = {% if user|is_system_manager %}true{% else %}false{% endif %};
+	W.isUseWepage = {% if user.get_profile.is_use_wepage %}true{% else %}false{% endif %};
 	var bottomDistance = 110;
 
 	var loadGlobalNavbar = function(pageManagerView) {
