--- a/weapp/termite/static/css/common_widget.css
+++ b/weapp/termite/static/css/common_widget.css
@@ -110,6 +110,7 @@
 .wui-template-globalNavbar .xui-globalBottomBar .xui-subMenu li a{
     color: #333;
     display: block;
+    height: 41px;
     border-bottom: 1px solid #CBCBCB;
 }
 .wui-template-globalNavbar .xui-globalBottomBar .xui-subMenu li:last-child a{
