微信互动平台】-【消息互动】-【模板消息】对“模板ID”的使用说明文字不通顺

--- a/weapp/weixin2/templates/weixin/message/template_messages_detail.html
+++ b/weapp/weixin2/templates/weixin/message/template_messages_detail.html
@@ -108,7 +108,7 @@
 	});
     $(function(){
         $('.xa-showIntroduction').on('mouseover',function(){
-        $('.xa-parentAddbox').append('<div class="xui-templateIntroduction"><p class="pt20">模板消息仅用于公众号向用户发送业务通知。如信支付成功商品购买成功通知等，模板消息只对认证的服务号开放。</p><p>配置方法：</p><ul><li>1、登录微信公众平台</li><li>2、在“添加功能插件”处添加模板消息，并填写申请信息</li><li>3、打开模板消息</li><li>4、在模板库中添加对应编号的模板</li><li>5、在我的模板中复制模板ID</li><li>6、在微众后台模板消息配置中粘贴所复制的ID</li><li>7、填写开头语和结束语，其他商品信息系统会自动获取无需自己填写</li></ul><div>')
+        $('.xa-parentAddbox').append('<div class="xui-templateIntroduction"><p class="pt20">模板消息仅用于公众号向用户发送业务通知。如微信支付成功商品购买成功通知等，模板消息只对认证的服务号开放。</p><p>配置方法：</p><ul><li>1、登录微信公众平台</li><li>2、在“添加功能插件”处添加模板消息，并填写申请信息</li><li>3、打开模板消息</li><li>4、在模板库中添加对应编号的模板</li><li>5、在我的模板中复制模板ID</li><li>6、在微众后台模板消息配置中粘贴所复制的ID</li><li>7、填写开头语和结束语，其他商品信息系统会自动获取无需自己填写</li></ul><div>')
     });
     $('.xa-showIntroduction').on('mouseout',function(){
          $(".xui-templateIntroduction").hide()
