[update]订单列表会员信息；修改规格；

--- a/weapp/mall/templates/mall/editor/model_properties.html
+++ b/weapp/mall/templates/mall/editor/model_properties.html
@@ -1,5 +1,11 @@
 {% extends "content_base_v2.html" %}
-
+{% block css%}
+<style>
+#mallAddProductModelPropertyValueDialog .modal-content{
+    overflow: hidden;
+}
+</style>
+{% endblock%}
 {% block content-panel %}
 <div class="xui-modelPropertyPage">
     <ul class="breadcrumb">
